Сверстала заголовок для десктопа

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Russian Travel</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
-    <div class="page">
-        <p>Скоро тут будет что-то интересное, а пока проверим шрифты</p>
-        <p style="font-weight: 400;">Inter Regular</p>
-        <p style="font-weight: 600;">Inter Bold</p>
-        <p style="font-weight: 900;">Inter Black</p>
-        <p style="font-weight: 700;">Unknown</p>
-    </div>    
+<body class="page">
+    <section class="header">
+        <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
+        <div class="header__lang-links">
+            <a href="#" class="header__lang-link">RU</a>
+            <a href="#" class="header__lang-link">EN</a>
+        </div>
+    </section>        
 </body>
 </html>
