--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
-    <section class="header">
-        <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
-        <div class="header__lang-links">
-            <a href="#" class="header__lang-link">RU</a>
-            <a href="#" class="header__lang-link">EN</a>
-        </div>
-    </section>        
+    <div class="page__content">
+        <section class="header">
+            <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
+            <div class="header__lang-links">
+                <a href="#" class="header__lang-link">RU</a>
+                <a href="#" class="header__lang-link">EN</a>
+            </div>
+        </section>
+    </div>            
 </body>
 </html>
