Верстка для 1280 и выше (по умолчанию)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
                 <a href="#" class="header__lang-link">EN</a>
             </div>
         </section>
-    </div>            
+        <section class="lead">
+            <h1 class="lead__title">Путешествия по России</h1>
+            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+            <div class="lead__image-container">
+                <img src="./images/lead-polka.jpg" alt="Полка" class="lead__image">
+                <p class="lead__caption">ваша полка — верхняя</p>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
