Сетка с картинками без стилей

--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
                 </li>
             </ul>
         </section>
+        <section class="photo-grid">
+            <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
+            <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы и облака">
+            <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман в полях">
+            <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
+            <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Машина на льду">
+            <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
+            <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+            <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Переход">
+            <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
+            <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка">
+            <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
+            <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
+        </section>
     </div>
 </body>
 </html>
