--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
             <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
         </section>
+        <section class="places">
+            
+        </section>
     </div>
 </body>
 </html>
