Создала структуру для Places

--- a/index.html
+++ b/index.html
@@ -65,7 +65,22 @@
             <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
         </section>
         <section class="places">
-            
+            <div class="place">
+                <h2 class="place__title"></h2>
+                <img class="place__image" src="" alt="">
+                <div class="place__website">
+                    <p class="place__url">URL</p>
+                    <a class="place__link" href="#"></a>                
+                </div>
+                <div class="place__description">
+                    <p class="place__paragraph">
+
+                    </p>
+                    <p class="place__paragraph">
+
+                    </p>
+                </div>
+            </div>
         </section>
     </div>
 </body>
