Вставила ссылки на настоящие ресурсы

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
                 <div class="place__website">
                     <p class="place__url">URL</p>
-                    <a class="place__link" href="#">park-kosa.ru</a>                
+                    <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>                
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -82,7 +82,7 @@
                 <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
                 <div class="place__website">
                     <p class="place__url">URL</p>
-                    <a class="place__link" href="#">National Geographic</a>                
+                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>                
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -94,7 +94,7 @@
                 <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
                 <div class="place__website">
                     <p class="place__url">URL</p>
-                    <a class="place__link" href="#">Facebook</a>                
+                    <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -106,7 +106,7 @@
                 <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
                 <div class="place__website">
                     <p class="place__url">URL</p>
-                    <a class="place__link" href="#">https://vk.com/baikalmile</a>                
+                    <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>                
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -118,7 +118,7 @@
                 <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
                 <div class="place__website">
                     <p class="place__url">URL</p>
-                    <a class="place__link" href="#">http://vodlozero.ru/</a>                
+                    <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>                
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
