Затемнение при наведении мыши на Байкал

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             <a class="cover">
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-                <!-- <div class="cover__overlay"></div> -->
-                <!-- <img src="./images/cover-trains.jpg" alt="Поезда" class="cover__background-image"> -->
+                <div class="cover__overlay"></div>
+                <img src="./images/cover-trains.jpg" alt="Поезда" class="cover__background-image">
             </a>
         </section>
     </div>
