--- a/index.html
+++ b/index.html
@@ -133,6 +133,28 @@
                 <img src="./images/cover-trains.jpg" alt="Поезда" class="cover__background-image">
             </a>
         </section>
+        <section class="footer">
+            <nav>
+                <ul class="footer__links">
+                    <li>
+                        <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+                    </li>
+                    <li>
+                        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+                    </li>
+                    <li>
+                        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+                    </li>
+                    <li>
+                        <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+                    </li>
+                    <li>
+                        <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+                    </li>
+                </ul>
+            </nav>
+            <p class="footer__author">&#169; 2020. Алина Смирнова</p>
+        </section>
     </div>
 </body>
 </html>
