Вынесла в модификатор выбранный язык

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="header">
             <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
             <div class="header__lang-links">
-                <a href="#" class="header__lang-link">RU</a>
+                <a href="#" class="header__lang-link header__lang-link_active">RU</a>
                 <a href="#" class="header__lang-link">EN</a>
             </div>
         </header>
