Убрала висящее тире, чтобы не било в глаз

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <section class="baikal">
                 <a class="cover" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
                     <h2 class="cover__title">До Байкала «на собаках»</h2>
-                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе&nbsp;— путешествие от столицы до Байкала на электричках.</p>
                     <div class="cover__overlay"></div>
                     <img src="./images/cover-trains.jpg" alt="Поезда" class="cover__background-image">
                 </a>
