Сгруппировала ссылки в шапке и исправила им текст

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="page__content">
         <header class="header">
             <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
-            <div class="header__lang-links">
-                <a href="#" class="header__lang-link header__lang-link_active">RU</a>
-                <a href="#" class="header__lang-link">EN</a>
-            </div>
+            <ul class="header__lang-links">
+                <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
+                <li><a href="#" class="header__lang-link">En</a></li>
+            </ul>
         </header>
         <main>
             <section class="lead">
