--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <div class="lead__image-container">
+                <figure class="lead__image-container">
                     <img src="./images/lead-polka.jpg" alt="Полка" class="lead__image">
                     <p class="lead__caption">ваша полка — верхняя</p>
-                </div>
+                </figure>
             </section>
             <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
