section для блока с галереей

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
                 </ul>
             </section>
-            <div class="photo-grid">
+            <section class="photo-grid">
                 <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
                 <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы и облака">
                 <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман в полях">
@@ -59,7 +59,7 @@
                 <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка">
                 <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
                 <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
-            </div>
+            </section>
             <section class="places">
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
