Обернула картинки в галерее в список

--- a/index.html
+++ b/index.html
@@ -47,18 +47,44 @@
                 </ul>
             </section>
             <section class="photo-grid">
-                <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
-                <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы и облака">
-                <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман в полях">
-                <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
-                <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Машина на льду">
-                <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
-                <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
-                <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Переход">
-                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
-                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка">
-                <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
-                <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
+                <ul class="photo-grid__list">
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы и облака">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман в полях">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Машина на льду">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Переход">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
+                    </li>
+                    <li>
+                        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
+                    </li>
+                </ul>
             </section>
             <section class="places">
                 <div class="place">
