Убрала блок baikal, теперь ссылка - элемент секции

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                     </div>
                 </article>
             </section>
-            <section class="baikal">
-                <a class="cover" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+            <section class="cover">
+                <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
                     <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе&nbsp;— путешествие от столицы до Байкала на электричках.</p>
                     <div class="cover__overlay"></div>
